--- a/notebooks/3_Experiment.ipynb
+++ b/notebooks/3_Experiment.ipynb
@@ -51,7 +51,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"/Users/ridhampatel/Documents/DS/Projects/Spotify/playlist_comfort_zones.csv\")"
+    "df = pd.read_csv(\"playlist_comfort_zones.csv\")"
    ]
   },
   {
