--- a/notebooks/3_Experiment.ipynb
+++ b/notebooks/3_Experiment.ipynb
@@ -510,7 +510,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_songs = pd.read_csv(\"/Users/ridhampatel/Documents/DS/Projects/Spotify/spotify.csv\")"
+    "df_songs = pd.read_csv(\"spotify.csv\")"
    ]
   },
   {
