--- a/notebooks/2_EDA.ipynb
+++ b/notebooks/2_EDA.ipynb
@@ -627,7 +627,7 @@
     "\n",
     "In this analysis, I'm treating each playlist as one user - meaning one playlist = one person's music taste. Obviously this isn't perfect (people have multiple playlists, some playlists are collaborative, etc.), but it's a reasonable approximation for this project.\n",
     "\n",
-    "The assumption is that a single playlist captures enough of someone's preferences to judge how adventurous they are musically. It's definitely a limitation, but for a portfolio project analyzing Spotify data, it works.\n",
+    "The assumption is that a single playlist captures enough of someone's preferences to judge how adventurous they are musically.\n",
     "\n",
     "(In a real setting, I'd want to look at user-level data across all their playlists, but I don't have access to that.)"
    ]
