--- a/notebooks/3_Experiment.ipynb
+++ b/notebooks/3_Experiment.ipynb
@@ -19,7 +19,7 @@
     "- Simulate what would happen to engagement\n",
     "- Check for unintended consequences (guardrail metrics)\n",
     "\n",
-    "**Important note:** This is a simulated experiment for my portfolio. In production, we'd run this on real users and measure actual behavior. But for now I'm creating realistic synthetic data to demonstrate the experimental design process.\n",
+    "**Important note:** This is a simulated experiment for my portfolio. In production, I'd run this on real users and measure actual behavior. But for now I'm creating realistic synthetic data to demonstrate the experimental design process.\n",
     "\n"
    ]
   },
